# peoplebot-definitive-edition

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config_example.toml
.github/workflows/: cleanup-images.yml  docker-ci.yml  release.yml
src/: helpers.rs  macros.rs  main.rs  model.rs  prelude.rs  tracing.rs
src/core/: env.rs  error.rs  mod.rs
src/embedder/: mod.rs
src/examples/: attachment_params.rs  autocomplete.rs
src/model/: env.rs  mod.rs
src/modules/: mod.rs
src/modules/embedder/: commands.rs  mod.rs  model.rs
src/modules/examples/: attachment_params.rs  autocomplete.rs  mod.rs
src/modules/misc/: commands.rs
