[package]
name = "peoplebot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
derive-new = "0.7"
dotenvy = "0.15"
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }
regex = "1.12"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "1.47", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
url = "2.5"
opendal = "0.54"
tracing-subscriber = "0.3"
inventory = "0.3"
tracing = {version = "0.1", features = ["release_max_level_info"]}
thiserror = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
