[package]
name = "peoplebot"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
tokio = { version = "1.47", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "parking_lot", # Potential perf improvement
] }
tokio-util = "0.7"
futures = "0.3"

# Discord frameworks
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
songbird = "0.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config / Environment
dotenvy = "0.15"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text Parsing
regex = "1.12"
url = "2.5"

# Storage Backend
opendal = "0.54"

# Helpful Derives
derive-new = "0.7"
inventory = "0.3"
uuid = "1.18.1"
tokio-stream = "0.1.17"


[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
