[package]
name = "peoplebot"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
tokio = { version = "1.47", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "parking_lot", # Potential perf improvement
] }
tokio-util = "0.7"
futures = "0.3"

# Discord frameworks
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
songbird = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config / Environment
dotenvy = "0.15"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = { version = "0.1", features = ["release_max_level_warn"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] } # reduces runtime perf hit, not sure if this makes any difference to the tracing one

# Text Parsing
regex = "1.12"
url = "2.5"

# Storage Backend
opendal = "0.54"

# Database
turso = "0.3"

# Helpful Derives
derive-new = "0.7"
inventory = "0.3"
uuid = "1.18"
tokio-stream = "0.1"


[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
